@@ -1,37 +1,47 @@
 package info.jab.easyracer;
 
+import java.lang.management.ManagementFactory;
 import java.net.URI;
 import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
+import java.time.Duration;
 import java.time.Instant;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
+import java.util.Random;
+import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
-import java.util.concurrent.Executors;
 import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Supplier;
-import java.util.Comparator;
 import java.util.stream.IntStream;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import com.sun.management.OperatingSystemMXBean;
+
 import io.vavr.Function1;
-import io.vavr.Function2;
 import io.vavr.Function3;
+import io.vavr.Function4;
 
 public class Scenarios {
 
     private static final Logger logger = LoggerFactory.getLogger(Scenarios.class);
 
+    private static final int DEFAULT_TIMEOUT_SECONDS = 5;
+
     private final URI url;
     private final HttpClient client;
     private final HttpResponse.BodyHandler<String> config = HttpResponse.BodyHandlers.ofString();
 
-    private final ExecutorService executorService =
-        Executors.newFixedThreadPool(Runtime.getRuntime().availableProcessors() -1);
+    private final ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor();
 
     public Scenarios(URI url) {
         this.url = url;
@@ -62,8 +72,8 @@ public class Scenarios {
             return value == RIGHT;
         }
 
-        public static Values fromHttpResponse(HttpResponse response) {
-            return fromString(response.body().toString());
+        public static Values fromHttpResponse(HttpResponse<String> response) {
+            return fromString(response.body());
         }
 
         public static Values fromString(String value) {
@@ -71,13 +81,12 @@ public class Scenarios {
         }
     }
 
-    final private Function2<HttpClient, HttpRequest, CompletableFuture<Values>> asyncCall =
-        (client, request) ->
+    private final Function3<Integer, HttpClient, HttpRequest, CompletableFuture<Values>> asyncCall =
+        (timeoutSeconds, client, request) ->
             client.sendAsync(request, config)
-            .orTimeout(5, TimeUnit.SECONDS)
+            .orTimeout(timeoutSeconds, TimeUnit.SECONDS)
             .handle((result, ex) -> {
                 if (!Objects.isNull(ex)) {
-                    //logger.warn("Error occurred: " + ex.getLocalizedMessage());//DEBUG ONLY
                     return Values.LEFT;
                 }
                 if (result.statusCode() == 200) {
@@ -86,11 +95,12 @@ public class Scenarios {
                 return Values.LEFT;
             });
 
-    private final Function3<Integer, HttpClient, HttpRequest, List<CompletableFuture<Values>>> getPromises =
-        (n, client, request) -> IntStream.rangeClosed(1, n)
-            .mapToObj(_ -> asyncCall.apply(client, request))
+    private final Function4<Integer, Integer, HttpClient, HttpRequest, List<CompletableFuture<Values>>> getPromises =
+        (n, timeoutSeconds, client, request) -> IntStream.rangeClosed(1, n)
+            .mapToObj(_ -> asyncCall.apply(timeoutSeconds, client, request))
             .toList();
 
+    //TODO: Improve race logic behavior.
     private final Function1<List<CompletableFuture<Values>>, Values> process =
         (futures) -> futures.stream()
             .map(CompletableFuture::join)
@@ -98,65 +108,77 @@ public class Scenarios {
             .findFirst()
             .orElse(Values.LEFT);
 
-    private Values scenario1() {
+    Values scenario1() {
         logger.info("Scenario 1");
         HttpRequest request = HttpRequest.newBuilder(url.resolve("/1")).build();
 
-        return getPromises.andThen(process).apply(2, client, request);
+        return getPromises.andThen(process).apply(2, DEFAULT_TIMEOUT_SECONDS, client, request);
     }
 
-    private Values scenario2() {
+    Values scenario2() {
         logger.info("Scenario 2");
         HttpRequest request = HttpRequest.newBuilder(url.resolve("/2")).build();
 
-        return getPromises.andThen(process).apply(2, client, request);
+        return getPromises.andThen(process).apply(2, DEFAULT_TIMEOUT_SECONDS, client, request);
     }
 
-    private Values scenario3() {
+    Values scenario3() {
         logger.info("Scenario 3");
+        var timeoutSeconds = 120;
         HttpRequest request = HttpRequest.newBuilder(url.resolve("/3")).build();
 
         //OSX issue detected when you open 10k http connections
         //https://www.tianxiangxiong.com/2024/07/08/virtual-threads.html
-        return getPromises.andThen(process).apply(10_000, client, request);
+        return getPromises.andThen(process).apply(10_000, timeoutSeconds, client, request);
     }
 
-    //TODO PENDING
-    private Values scenario4() {
+    Values scenario4() {
         logger.info("Scenario 4");
+        // Timeout set on the HttpRequest so the underlying connection is actually
+        // closed on timeout (server only releases the winner once the loser is gone).
+        HttpRequest shortRequest = HttpRequest.newBuilder(url.resolve("/4"))
+            .timeout(Duration.ofSeconds(1))
+            .build();
+        HttpRequest request = HttpRequest.newBuilder(url.resolve("/4")).build();
 
-        return Values.RIGHT;
+        var promises = List.of(
+            asyncCall.apply(DEFAULT_TIMEOUT_SECONDS, client, shortRequest),
+            asyncCall.apply(DEFAULT_TIMEOUT_SECONDS, client, request)
+        );
+
+        return process.apply(promises);
     }
 
-    private Values scenario5() {
+    Values scenario5() {
         logger.info("Scenario 5");
         HttpRequest request = HttpRequest.newBuilder(url.resolve("/5")).build();
 
-        return getPromises.andThen(process).apply(2, client, request);
+        return getPromises.andThen(process).apply(2, DEFAULT_TIMEOUT_SECONDS, client, request);
     }
 
-    private Values scenario6() {
+    Values scenario6() {
         logger.info("Scenario 6");
         HttpRequest request = HttpRequest.newBuilder(url.resolve("/6")).build();
 
-        return getPromises.andThen(process).apply(3, client, request);
+        return getPromises.andThen(process).apply(3, DEFAULT_TIMEOUT_SECONDS, client, request);
     }
 
-    private Values scenario7() {
+    Values scenario7() {
         logger.info("Scenario 7");
+        var timeoutSeconds = 3;
         HttpRequest request = HttpRequest.newBuilder(url.resolve("/7")).build();
 
         var promise1 = client.sendAsync(request, config).thenApply(Values::fromHttpResponse);
         var promise2 = CompletableFuture.supplyAsync(
                 () -> client.sendAsync(request, config).thenApply(Values::fromHttpResponse).join(),
-                CompletableFuture.delayedExecutor(3, TimeUnit.SECONDS));
+                CompletableFuture.delayedExecutor(timeoutSeconds, TimeUnit.SECONDS));
 
         var promises = List.of(promise1,promise2);
 
         return process.apply(promises);
     }
 
-    private Values scenario8() {
+    Values scenario8() {
         logger.info("Scenario 8");
 
         Supplier<CompletableFuture<Values>> resourceFlow = () -> {
@@ -187,7 +209,7 @@ public class Scenarios {
         return process.apply(promises);
     }
 
-    private Values scenario9() {
+    Values scenario9() {
         logger.info("Scenario 9");
         HttpRequest request = HttpRequest.newBuilder(url.resolve("/9")).build();
 
@@ -209,19 +231,68 @@ public class Scenarios {
         return Values.fromString(rawResult);
     }
 
-    //TODO PENDING
-    private Values scenario10() {
+    Values scenario10() {
         logger.info("Scenario 10");
+        var id = UUID.randomUUID().toString();
+        var osBean = ManagementFactory.getPlatformMXBean(OperatingSystemMXBean.class);
 
-        return Values.RIGHT;
+        // CPU-heavy task: SHA-512 digest loop on a virtual thread.
+        // CompletableFuture.cancel(true) does NOT propagate interrupts, so we use a
+        // cooperative AtomicBoolean flag flipped by the blocker callback.
+        var cancelled = new AtomicBoolean(false);
+        CompletableFuture<Void> cpuTask = CompletableFuture.runAsync(() -> {
+            try {
+                var messageDigest = MessageDigest.getInstance("SHA-512");
+                var buf = new byte[512];
+                new Random().nextBytes(buf);
+                while (!cancelled.get()) {
+                    buf = messageDigest.digest(buf);
+                }
+            } catch (NoSuchAlgorithmException e) {
+                throw new RuntimeException(e);
+            }
+        }, executorService);
+
+        // Part 1 (blocker): hold the HTTP connection open; signal the CPU task to stop once it closes.
+        HttpRequest blockerRequest = HttpRequest.newBuilder(url.resolve("/10?" + id)).build();
+        var blocker = client.sendAsync(blockerRequest, config)
+            .whenComplete((response, ex) -> cancelled.set(true));
+
+        // Part 2 (load poller): every 1s send the current process CPU load.
+        // 2xx -> done, 3xx -> keep polling, 4xx -> error.
+        var loader = CompletableFuture.supplyAsync(() -> {
+            while (true) {
+                try {
+                    var load = osBean.getProcessCpuLoad() * osBean.getAvailableProcessors();
+                    HttpRequest request = HttpRequest.newBuilder(url.resolve("/10?" + id + "=" + load)).build();
+                    HttpResponse<String> response = client.send(request, config);
+                    int status = response.statusCode();
+                    //TODO: Use pattern matching with ranges.
+                    if (status >= 200 && status < 300) {
+                        return Values.fromString(response.body());
+                    } else if (status >= 300 && status < 400) {
+                        Thread.sleep(1000);
+                    } else {
+                        return Values.LEFT;
+                    }
+                } catch (Exception e) {
+                    return Values.LEFT;
+                }
+            }
+        }, executorService);
+
+        var result = loader.join();
+        blocker.join();
+        cpuTask.join();
+        return result;
     }
 
-    private Values scenario11() {
+    Values scenario11() {
         logger.info("Scenario 11");
         HttpRequest request = HttpRequest.newBuilder(url.resolve("/11")).build();
 
         // Create an inner race with 2 requests
-        var innerRace = getPromises.andThen(process).apply(2, client, request);
+        var innerRace = getPromises.andThen(process).apply(2, DEFAULT_TIMEOUT_SECONDS, client, request);
 
         // Combine the inner race with another request
         var outerRace = List.of(
@@ -230,9 +301,5 @@ public class Scenarios {
         );
 
         return process.apply(outerRace);
-    }
-
-    List<Values> results() {
-        return List.of(scenario1(), scenario2(), scenario3(), scenario4(), scenario5(), scenario6(), scenario7(), scenario8(), scenario9(), scenario10(), scenario11());
     }
 }
